# labbox

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
labbox/: Config.py  GIFHandler.py  LabBox.py  Plot2D.py  Settings.py  __init__.py  __main__.py  defines.py  generator.py
labbox/settings/: settings.json
labbox/ui/: Ui_Config.py  Ui_Config.ui  Ui_LabBox.py  Ui_LabBox.ui
scripts/: labbox  labbox_generator
